Fix color of feature pod network icon in OOBE.

The animation on network feature pod button was drawin in a wrong color
while a wireless network is connecting, when in OOBE and Unified System
Tray is enabled.

Bug: 874829
Change-Id: I4506008e5584e6f3830198d7236a7d75f2ca0aa5
Reviewed-on: https://chromium-review.googlesource.com/1183008
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585688}
Former-commit-id: f1c1363ffc03cd76ca812d2848050713752b1776